# Projeto-TCC---Chatbot-nutricional

./: .gitignore
chatbot-nutricional-inteligente/: .env  .gitignore  README.md  check_models.py  diagnosticos.py  pyproject.toml  requirements.txt
chatbot-nutricional-inteligente/data/: corpus.sql  nutricao.txt
chatbot-nutricional-inteligente/docs/: arquitetura.md
chatbot-nutricional-inteligente/src/: app.py  bot_logic.py  tools.py
chatbot-nutricional-inteligente/src/core/: config.py
chatbot-nutricional-inteligente/src/geracao_base_conhecimento/: models.py
chatbot-nutricional-inteligente/src/gerenciamento_suporte/: api.py  logger.py
chatbot-nutricional-inteligente/src/models/: message.py
chatbot-nutricional-inteligente/src/utils/: nlp.py
chatbot-nutricional-inteligente/src_backup/src/: main.py
chatbot-nutricional-inteligente/src_backup/src/assistente_virtual/: assistant.py  prompt_manager.py  responder.py
chatbot-nutricional-inteligente/src_backup/src/geracao_base_conhecimento/: embeddings.py  generator.py  storage.py
chatbot-nutricional-inteligente/src_backup/src/gerenciamento_suporte/: message_handler.py
chatbot-nutricional-inteligente/src_backup/src/models/: user.py
chatbot-nutricional-inteligente/src_backup/src/utils/: db.py
chatbot-nutricional-inteligente/src_backup/tests/: test_assistente_virtual.py  test_geracao_base_conhecimento.py  test_gerenciamento_suporte.py
