[tool.poetry]
name = "chatbot-nutricional-inteligente"
version = "0.1.0"
description = "Um chatbot nutricional inteligente que fornece informações e suporte sobre nutrição."
authors = ["Seu Nome <seuemail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
sqlalchemy = "^1.4"
pydantic = "^1.9"
numpy = "^1.21"
scikit-learn = "^1.0"
transformers = "^4.11"
torch = "^1.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"